<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="Sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="signup_now">Sign up now</string>
    <string name="username_or_password_not_true">Username or password is not True</string>


    <string name="sign_up">Sign up</string>
    <string name="Tv_contact_name">Enter Contact fullname here... </string>

    <string name="sign_in_now">Sign in now</string>
    <string name="check_password">Check password</string>


    <string name="welcome_text" >Welcome !</string>
</resources>