<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/Sign_in_text"
       android:textColor="@color/white"
       android:textSize="30sp"
       android:textStyle="bold"
       android:text="@string/Sign_in"
       android:gravity="center"
       android:layout_margin="50dp">
   </TextView>

   <EditText
       android:layout_width="match_parent"
       android:drawableLeft="@drawable/ic_baseline_person_24"
       android:layout_height="wrap_content"
       android:id="@+id/username"
       android:autofillHints="false"
       android:background="@color/editTextBackGroundColor"
       android:layout_below="@id/Sign_in_text"
       android:hint="@string/username"
       android:textColorHint="@color/white"
       android:layout_marginTop="20dp"
       android:padding="20dp"
       android:textColor="@color/white"
       android:inputType="text"
       android:drawablePadding="20dp"
       android:layout_marginHorizontal="20dp">
   </EditText>


   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:autofillHints="false"
       android:layout_below="@id/username"
       android:id="@+id/password"
       android:hint="@string/password"
       android:textColor="@color/white"
       android:drawableLeft="@drawable/password_24"
       android:drawablePadding="20dp"
       android:textColorHint="@color/white"
       android:inputType="textPassword"
       android:layout_marginTop="20dp"
       android:background="@color/editTextBackGroundColor"
       android:padding="20dp"
       android:layout_marginHorizontal="20dp">
   </EditText>

   <com.google.android.material.button.MaterialButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/login_btn"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="50dp"
       android:textColor="@color/white"
       android:layout_below="@id/password"
       android:id="@+id/login_btn"
     >
   </com.google.android.material.button.MaterialButton>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/login_btn"
       android:text="@string/forget_password"
       android:layout_marginTop="20dp"
       android:id="@+id/forget_password"
       android:textColor="@color/white"
       android:layout_centerHorizontal="true"
       android:gravity="center"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@id/social_lions"
       android:layout_centerHorizontal="true"
       android:id="@+id/signup_now"
       android:textSize="15sp"
       android:layout_margin="20dp"
       android:text="@string/signup_now"
       />

   <LinearLayout
       android:id="@+id/social_lions"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:gravity="center">

      <ImageView
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_margin="20dp"
          android:src="@drawable/google" />

      <ImageView
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_margin="20dp"
          android:src="@drawable/fb" />

      <ImageView
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_margin="20dp"
          android:src="@drawable/twitter" />
   </LinearLayout>






</RelativeLayout>