<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/sign_up_text"
        android:layout_margin="40dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:id="@+id/edit_text_username_sing_up"
        android:padding="20dp"
        android:background="@color/editTextBackGroundColor"
        android:layout_below="@id/sign_up_text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/password_edit_text_signup"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:background="@color/editTextBackGroundColor"
        android:layout_below="@id/edit_text_username_sing_up"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/check_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/password_edit_text_check_signup"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:background="@color/editTextBackGroundColor"
        android:layout_below="@id/password_edit_text_signup"
        />


    <com.google.android.material.button.MaterialButton
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_btn"
        android:layout_below="@+id/password_edit_text_check_signup"
        android:layout_centerHorizontal="true"
       android:layout_marginTop="30dp"
        >
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/social_sing_up"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_now"
        android:id="@+id/sign_in_now_text"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/social_sing_up"

        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb"
            />
        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            />

        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"
            />



    </LinearLayout>






</RelativeLayout>